alb.tf
resource "aws_lb" "alb" {

  name = "MyALB"

  internal = false

  load_balancer_type = "application"

  security_groups = [
    aws_security_group.alb_sg.id

   ]

  subnets = [

    aws_subnet.public_subnet_1.id,
    aws_subnet.public_subnet_2.id

      ]

  tags = {

    Name = "MyALB"


      }

      }




resource "aws_lb_listener" "http_listener" {


  load_balancer_arn = aws_lb.alb.arn

  port = 80

  protocol = "HTTP"

  default_action {

    type = "forward"

    target_group_arn = aws_lb_target_group.tg.arn


     }

     }
